Removed auth state and fixed header z-index bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,7 +92,7 @@ header {
   height: 70px;
   color: #fff;
   background-color: #122;
-  z-index: 1;
+  z-index: 2;
 }
 
 header a {
